--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-react": "^7.9.4",
         "axios": "^0.19",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "laravel-mix": "^5.0.4",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-js-pagination": "^3.0.3",
         "react-router-dom": "^5.1.2",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.26.3",
+        "sass-loader": "^8.0.2"
     }
 }
